--- a/books/templates/books/confirm_delete_review.html
+++ b/books/templates/books/confirm_delete_review.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block title %} Edit Review {% endblock %}
+
+{% block content %}
+  <h3>Are you shure you want to delete this review? </h3>
+  <p><b>Book:</b> {{ book.title }}</p>
+  <p><b>Review:</b> {{ review.comment }}</p>
+
+  <a class="btn btn-outline-danger" href="{% url 'books:delete-review' book.id review.id %}">Yes</a>
+  <a class="btn btn-outline-primary" href="{% url 'books:detail' book.id %}">No</a>
+{% endblock %}
